--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -26,6 +26,9 @@
 %% above. 
 
 \documentclass[12pt,twoside]{mitthesis}
+\usepackage[font=small,labelfont=bf,
+   justification=justified,
+   format=plain]{caption}
 \usepackage{amsmath}
 \usepackage{lgrind}
 \usepackage{minted}
